--- a/index.html
+++ b/index.html
@@ -5,76 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hangman Game</title>
     <style>
+        /* Add your CSS styles here */
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 20px;
+            padding-top: 50px;
         }
-
         #hangman-container {
-            background-color: #fff;
+            max-width: 400px;
+            margin: 0 auto;
+            border: 2px solid #ccc;
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            display: inline-block;
-            max-width: 400px;
-            width: 100%;
+            background-color: #f9f9f9;
         }
-
-        h1 {
-            color: #333;
-        }
-
-        #word-display {
-            font-size: 24px;
-            letter-spacing: 5px;
-            margin: 20px 0;
-            color: #333;
-        }
-
-        #remaining-guesses,
-        #letters-guessed {
-            font-size: 18px;
-            margin: 10px 0;
-            color: #666;
-        }
-
-        #guess-input {
-            padding: 10px;
-            font-size: 16px;
-            width: calc(100% - 22px);
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
         button {
-            padding: 10px 20px;
+            margin-top: 10px;
+            padding: 8px 16px;
             font-size: 16px;
-            margin: 10px 5px;
+            cursor: pointer;
+            background-color: #4caf50;
+            color: white;
             border: none;
             border-radius: 5px;
-            cursor: pointer;
         }
-
         button:hover {
-            background-color: #ddd;
-        }
-
-        button:active {
-            background-color: #ccc;
-        }
-
-        button:nth-child(1) {
-            background-color: #4CAF50;
-            color: white;
-        }
-
-        button:nth-child(2) {
-            background-color: #f44336;
-            color: white;
+            background-color: #45a049;
         }
     </style>
 </head>
@@ -82,15 +38,16 @@
     <h1>Hangman Game</h1>
     <div id="hangman-container">
         <p id="word-display"></p>
-        <p id="remaining-guesses">Remaining Guesses: <span id="remaining-count">6</span></p>
-        <p id="letters-guessed">Letters Guessed: <span id="guessed-letters"></span></p>
+        <p>Remaining guesses: <span id="remaining-count">6</span></p>
+        <p>Letters guessed: <span id="guessed-letters"></span></p>
         <input type="text" id="guess-input" maxlength="1" placeholder="Enter a letter">
         <button onclick="guessLetter()">Guess</button>
         <button onclick="resetGame()">Reset Game</button>
     </div>
 
     <script>
-        const words = ['apple', 'banana', 'cherry', 'orange', 'strawberry'];
+        // JavaScript code for Hangman game
+        const words = ['apple', 'banana', 'cherry', 'orange', 'strawberry']; // Sample word list
         let secretWord = '';
         let guessedLetters = [];
         let remainingGuesses = 6;
@@ -111,18 +68,14 @@
             const guessedLettersDisplay = document.getElementById('guessed-letters');
             const remainingGuessesDisplay = document.getElementById('remaining-count');
 
-            let displayedWord = '';
-            for (const letter of secretWord) {
-                if (guessedLetters.includes(letter)) {
-                    displayedWord += letter + ' ';
-                } else {
-                    displayedWord += '_ ';
-                }
-            }
-            wordDisplay.textContent = displayedWord.trim();
+            // Display the secret word with correctly guessed letters
+            let displayedWord = secretWord.split('').map(letter => guessedLetters.includes(letter) ? letter : '_').join(' ');
+            wordDisplay.textContent = displayedWord;
 
+            // Display guessed letters
             guessedLettersDisplay.textContent = guessedLetters.join(', ');
 
+            // Display remaining guesses
             remainingGuessesDisplay.textContent = remainingGuesses;
         }
 
@@ -130,7 +83,7 @@
             const inputElement = document.getElementById('guess-input');
             const guess = inputElement.value.toLowerCase().trim();
 
-            if (guess.length !== 1 || !/[a-z]/.test(guess)) {
+            if (!/^[a-z]$/.test(guess)) {
                 alert('Please enter a single letter from A-Z.');
                 return;
             }
@@ -148,6 +101,7 @@
 
             updateDisplay();
 
+            // Check if the player has won or lost
             if (isWordGuessed()) {
                 alert('Congratulations! You guessed the word: ' + secretWord);
                 startGame();
@@ -156,7 +110,7 @@
                 startGame();
             }
 
-            inputElement.value = '';
+            inputElement.value = ''; // Clear input field
         }
 
         function isWordGuessed() {
@@ -167,7 +121,9 @@
             startGame();
         }
 
+        // Initialize game on page load
         startGame();
     </script>
 </body>
 </html>
+
